--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+            
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -42,6 +43,27 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>8.0.29</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.ladsn</groupId>
+	  <artifactId>spring-boot-starter-data-jpa</artifactId>
+	  <version>2.1.3</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-data-jpa</artifactId>
+	  <version>2.7.0</version>
+	  <type>module</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.wisdom-framework</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>5.1.34_1</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
